# Security-in-Distributed-Systems-FHB

./: README.md  ruff.toml
challenges/: pyproject.toml
challenges/01_steganography/: main.py  steganography.ipynb  steganography.py
challenges/02_hash/: hash.ipynb
challenges/03_hash_salt_pepper/: salt_pepper.ipynb
challenges/04_symmetric_encryption/: symmetric_encryption.ipynb
challenges/05_asymmetric_encryption/: asymmetric_encryption.ipynb
challenges/06_pgp/: pgp.ipynb
challenges/07_pki_certificates/: certificate.crt  pki_certificates.ipynb  private_key.key
challenges/08_tls_integration/: flask_example.py  tls_integration.ipynb
challenges/09_cia_triade/: cia_triade.ipynb
challenges/10_connection_listening/: connection_listening.ipynb
